data:examples/controlled-exp/Istio/rabbitmq-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq
spec:
  hosts:
  - rabbitmq
